// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<div
  className="container"
  id={undefined}
  onChange={undefined}
>
  <span
    className="wrapper"
  >
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime2"
      name="control"
      onChange={[Function]}
      type="radio"
      value="aa"
    />
    <label
      className="control"
      htmlFor="_teatime2"
    />
    <label
      className="label"
      htmlFor="_teatime2"
    >
      AA
    </label>
  </span>
  <span
    className="wrapper"
  >
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime3"
      name="control"
      onChange={[Function]}
      type="radio"
      value="bb"
    />
    <label
      className="control"
      htmlFor="_teatime3"
    />
    <label
      className="label"
      htmlFor="_teatime3"
    >
      BB
    </label>
  </span>
  <span
    className="wrapper"
  >
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={undefined}
      id="_teatime4"
      name="control"
      onChange={[Function]}
      type="radio"
      value="cc"
    />
    <label
      className="control"
      htmlFor="_teatime4"
    />
    <label
      className="label"
      htmlFor="_teatime4"
    >
      CC
    </label>
  </span>
</div>
`;

exports[`Renders correctly with defined props 1`] = `
<div
  className="container outer"
  id="controls-id"
  onChange={undefined}
>
  <span
    className="wrapper"
  >
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={true}
      id="_teatime6"
      name="control"
      onChange={[Function]}
      type="radio"
      value="aa"
    />
    <label
      className="control"
      htmlFor="_teatime6"
    >
      AA
    </label>
  </span>
  <span
    className="wrapper"
  >
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={true}
      id="_teatime7"
      name="control"
      onChange={[Function]}
      type="radio"
      value="bb"
    />
    <label
      className="control"
      htmlFor="_teatime7"
    >
      BB
    </label>
  </span>
  <span
    className="wrapper"
  >
    <input
      checked={false}
      className="native"
      defaultValue={undefined}
      disabled={true}
      id="_teatime8"
      name="control"
      onChange={[Function]}
      type="radio"
      value="cc"
    />
    <label
      className="control"
      htmlFor="_teatime8"
    >
      CC
    </label>
  </span>
</div>
`;
